# sokoban

./: Cargo.toml  README.md
.github/workflows/: build-appimage.yml
docs/: migration-architecture-note.md
levels/imported/: Its all Greek.txt  Numbers.txt  Set 4.txt
packaging/appimage/: .gitignore  AppImageBuilder.yml  AppRun  build-appimage.sh  sokoban.desktop
src/: app.rs  coord.rs  editor.rs  editor_model.rs  game.rs  level.rs  lib.rs  main.rs  paths.rs  render.rs  rules.rs  state.rs
