[package]
name = "sokoban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_state",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11",
] }
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
winit = "0.30"
